--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
         <title>Document</title>
         <link rel="stylesheet" href="style.css">
     </head>
-    <body>
+    <body class="bdy">
+
+        <button class="btn">Click me</button>
 
         <script src="./script.js"></script>
 
