--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     </head>
     <body class="bdy">
 
-        <button class="btn">Click me</button>
+        <button id="myButton">Click me</button>
 
         <script src="./script.js"></script>
 
