--- a/index.html
+++ b/index.html
@@ -8,7 +8,26 @@
     </head>
     <body class="bdy">
 
-        <button id="myButton">Click me</button>
+        <button class="btn">Hide</button>
+        <!-- <h1>hello ji</h1> -->
+        <div class="container ">
+
+
+        </div>
+        <p class="para">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Magnam, doloribus.</p>
+        <p class="para">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Magnam, doloribus.</p>
+        <p class="para">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Magnam, doloribus.</p>
+        <p class="para">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Magnam, doloribus.</p>
+        <p class="para">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Magnam, doloribus.</p>
+        <p class="para">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Magnam, doloribus.</p>
+        <p class="para">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Magnam, doloribus.</p>
+        <p class="para">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Magnam, doloribus.</p>
+        <p class="para">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Magnam, doloribus.</p>
+        <p class="para">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Magnam, doloribus.</p>
+        <p class="para">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Magnam, doloribus.</p>
+        <p class="para">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Magnam, doloribus.</p>
+        <p class="para">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Magnam, doloribus.</p>
+        <p class="para">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Magnam, doloribus.</p>
 
         <script src="./script.js"></script>
 
